--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,8 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPyO3virPS3MWA3SsXHULWk7VhgB4pZic"
+  type="text/javascript"></script>
 </head>
 
 <body>
